Fix: wrap product img and product name in Link

--- a/src/pages/general-pages/ProductListPage/ProductList/ProductCardFull/ProductCardFull.module.scss
+++ b/src/pages/general-pages/ProductListPage/ProductList/ProductCardFull/ProductCardFull.module.scss
@@ -20,6 +20,7 @@
 
 .name {
   overflow: hidden;
+  align-self: flex-start;
 
   margin-bottom: 6px;
 
@@ -30,6 +31,12 @@
   text-overflow: ellipsis;
   letter-spacing: 0.16px;
   white-space: nowrap;
+
+  transition: 0.3s;
+
+  &:hover {
+    color: var(--color-red);
+  }
 }
 
 .categories {
